Restyled the header for mobile, fixed title alignment for comment for, and changed comment input to textarea to contain text and set a min and max char limit to field.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -182,6 +182,11 @@ img {
     font-size: 0.75rem;
 }
 
+#drink-description {
+    display: flex;
+    height: 10vh;
+}
+
 .empty-container {
     height: 100px;
 }
@@ -220,7 +225,7 @@ footer .col-6 h4, footer .col-6 p {
 
 /* MEDIA QUERIES */
 
-@media (max-width: 412px) {
+@media (max-width: 415px) {
 
     /* NAVBAR */
 
@@ -236,11 +241,41 @@ footer .col-6 h4, footer .col-6 p {
 
     /* HEADER */
 
+    header {
+        background-position: 0 -100px;
+    }
+
     .header {
-        margin-top: 50px;
+        margin: 10px 0 10px 0;
+        height: 8vh;
+        padding: 2vw;
+        /* background-color: #293837cb; */
+        background-color: #b6f3f0b0;
+        border-radius: 15px;
+        box-shadow: 4px 8px 5px rgba(26, 25, 25, 0.5);
+    }
+
+    header h1, header h6 {
+        /* color: var(--primary-lighter); */
+        color: var(--primary-dark);
+        text-shadow: 2px 2px 3px rgba(26, 25, 25, 0.301);
+        margin: 0;
+        width: auto;
+    }
+
+    header h1 {
+        font-weight: 600;
+    }
+
+    header h6 {
+        font-weight: 300;
     }
 
     /* HOMEPAGE */
+
+    main {
+        z-index: 2;
+    }
 
     .drink-description {
         height: auto;
@@ -259,7 +294,7 @@ footer .col-6 h4, footer .col-6 p {
 
     #random-container {
         height: 80px;
-        margin-bottom: 20px;;
+        margin-bottom: 20px;
     }
 
     #pEl {
@@ -272,6 +307,17 @@ footer .col-6 h4, footer .col-6 p {
 
     .about-li {
         font-size: 1rem;;
+    }
+
+    /* COMMENT PAGE */
+
+    #make-comment-container {
+        padding: 0 8vw 0 8vw;
+        text-align: center;
+    }
+
+    #drink-description {
+        height: 8vh;
     }
 
     /* RESULTS */
